--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/csg": "^4.0.0",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "three-bvh-csg": "^0.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
